--- a/public/assets/css/website2.css
+++ b/public/assets/css/website2.css
@@ -82,8 +82,34 @@ footer {
 .text-page{
     width: 80%;
     margin: auto;
-    font-size: 20px;
+    font-size: 18px;
 }
 .h-title-a{
-    font-size: 35px;
+    font-size: 25px;
+}
+
+.result {
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    display: none;
+}
+.prisoner-card {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 15px;
+    background-color: #f9f9f9;
+}
+.prisoner-card .prisoner-name {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+.prisoner-card .prisoner-details {
+    font-size: 1rem;
+    margin-top: 5px;
+}
+.no-results {
+    color: red;
+    font-weight: bold;
 }
